chore: updated test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,13 +43,13 @@ jobs:
               uses: actions/setup-go@v5
 
             - name: Pull ginserver image
-              run: docker pull ginserver:latest
+              run: docker pull fatmaebrahim/ginserver
 
             - name: Run ginserver image
               run: docker run --name ginserver -d my-ginserver:latest
 
             - name: Pull httpserver image
-              run: docker pull httpserver:latest
+              run: docker pull fatmaebrahim/httpserver
 
             - name: Run httpserver image
               run: docker run --name httpserver -d my-httpserver:latest
