--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,13 +46,13 @@ jobs:
               run: docker pull fatmaebrahim/ginserver
 
             - name: Run ginserver image
-              run: docker run --name ginserver -d my-ginserver:latest
+              run: docker run --name ginserver -d fatmaebrahim/ginserver
 
             - name: Pull httpserver image
               run: docker pull fatmaebrahim/httpserver
 
             - name: Run httpserver image
-              run: docker run --name httpserver -d my-httpserver:latest
+              run: docker run --name httpserver -d fatmaebrahim/httpserver
 
             - name: Test
               run: go test ./test
