--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,4 +55,4 @@ jobs:
               run: docker run --name httpserver -p 8000:8000 -d fatmaebrahim/httpserver
 
             - name: Test
-              run: go test ./test
+              run: go test ./...
